--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Campo Minato</title>
 </head>
 <body>
-    <main>
-        <div id="grid">
-
+    <main class="d-flex justify-content-center align-items-center">
+        <div class="grid d-flex flex-wrap">
+            
         </div>
-
+        <button class="btn btn-primary">Play!</button>
     </main>
     <script src="./js/script.js"></script>
 </body>
