--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <title>Campo Minato</title>
 </head>
 <body>
-    <main class="d-flex justify-content-center align-items-center">
+    <header class="d-flex justify-content-between p-3">
+        <div class="logo">Boolean Minato</div>  
+        <div><button class="btn btn-primary">Play!</button></div>
+    </header>
+    <main class="d-flex justify-content-center align-items-center py-3">
         <div class="grid d-flex flex-wrap">
             
         </div>
-        <button class="btn btn-primary">Play!</button>
     </main>
+    <footer class="p-3">Made with &hearts; by Boolean</footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
